--- a/src/test/resources/configs/dev-config.properties
+++ b/src/test/resources/configs/dev-config.properties
@@ -1,1 +1,3 @@
-ui.url = https://retail.tekschool-students.com/
+ui.url = https://tek-retail-ui.azurewebsites.net/
+ui.browser.type = chrome
+ui.browser.isHeadless = true
