--- a/src/test/resources/configs/dev-config.properties
+++ b/src/test/resources/configs/dev-config.properties
@@ -1,3 +1,3 @@
 ui.url = https://tek-retail-ui.azurewebsites.net/
-ui.browser.type = chrome
-ui.browser.isHeadless = true
+ui.browser = chrome
+ui.browser.headless = true
